                      see the new class attribute 'creme_core.core.setting_key._SettingKey.FORM_FIELDS' instead.
                - The class-view 'views.user_settings.UserSettings' does not inject "apps_usersettings_bricks" in the context anymore.
                - The template 'user_settings.html' has been renamed 'user-settings.html' to be more consistent.
            * Persons :
                - In the method 'models.Address.info_field_names()' (use by several form generators for Address),
                  the excluded fields are just not-viewable fields (it was a hard coded list before).
                - The hat-card bricks have been reworked to facilitate the modification of small summaries (activities, acts, opportunities).
                  A base class 'CardSummary' has been introduced. The classes 'ContactCardHatBrick' & 'OrganisationCardHatBrick' get
                  new attributes "intro_summary" & "summaries"; so its easier to change summaries from external code (the dependencies of the bricks
                  are automatically computed, summaries indicate which template to use etc...).
                    - The class 'Activities4Card' has been replaced by 'LastActivityIntroSummary' & 'NextActivitySummary'.
                    - The class 'Opportunities4Card' has been replaced by 'OpportunitiesSummary'.
                    - The class 'CommercialActs4Card' has been replaced by 'CommercialActsSummary'.
                  The related templates have changed :
                    - "persons/bricks/*-hat-card.html"
                    - "persons/bricks/frags/card-*.html"
            * Activities :
                - The models 'ActivityType' & 'ActivitySubType' use now regular 'AutoField' (i.e. integer) for primary key,
                  & get an 'UUIDField' (they used custom 'CharField' as primary key).
                  The constant strings which allow to retrieve types by their ID have been replaced by constants UUID: